favicon não está funcionando, coloquei em minuscula

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       
     <meta charset="UTF-8">
 
-    <link rel="shortcut icon" href="DT.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="dt-favicon.ico" type="image/x-icon">
     <title>Currículo Devweek</title>
 
     <link rel="stylesheet" href="style.css">
