adicionando um link de certificado

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
               <div class="extra-training-description-box">
                 <p class="extra-training-description-text">
-                  <a href="">
+                  <a href="https://www.cursoemvideo.com/certificates/certificado/?course_id=26338&cert-nonce=6525a1c0dd">
                     Python nível avançado <br> 03 módulos de 40 horas cada
                   </a>                  
                 </p>
