adicionando target blank aos <a>

--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
             <ul>
 
               <li class="contact-info-text"> <img class="icon" src="icons/whatsapp.svg" alt="ícone do whatsapp">
-              <a href="https://wa.me/5564993442586">
+              <a href="https://wa.me/5564993442586" target="_blank" rel="noopener noreferrer">
                 (64) 99344-2586
               </a>
               </li>
 
               <li class="contact-info-text"> <img class="icon" src="icons/gmail.svg" alt="ícone do g-mail">
-              <a href="mailto:diulytofalo@gmail.com">
+              <a href="mailto:diulytofalo@gmail.com" target="_blank" rel="noopener noreferrer">
                 diulytofalo@gmail.com
               </a> 
               </li>
               
               <li class="contact-info-text"> <img class="icon" src="icons/github.svg" alt="ícone do github">
-              <a href="https://github.com/diulytofalo">
+              <a href="https://github.com/diulytofalo" target="_blank" rel="noopener noreferrer">
                 diulytofalo
               </a> 
               </li>
@@ -199,8 +199,8 @@
 
               <div class="extra-training-description-box">
                 <p class="extra-training-description-text">
-                  <a href="">
-                    HTML e CSS nível avançado <br> 05 módulos de 40 horas cada
+                  <a href="" target="_blank" rel="noopener noreferrer">
+                    05 módulos de 40 horas cada
                   </a>                  
                 </p>
               </div>
@@ -211,8 +211,8 @@
 
               <div class="extra-training-description-box">
                 <p class="extra-training-description-text">
-                  <a href="">
-                    Javascript nível intermediário <br> 01 módulo de 40 horas
+                  <a href="" target="_blank" rel="noopener noreferrer">
+                    01 módulo de 40 horas
                   </a>                  
                 </p>
               </div>
@@ -223,8 +223,8 @@
 
               <div class="extra-training-description-box">
                 <p class="extra-training-description-text">
-                  <a href="https://www.cursoemvideo.com/certificates/certificado/?course_id=26338&cert-nonce=6525a1c0dd">
-                    Python nível avançado <br> 03 módulos de 40 horas cada
+                  <a href="" target="_blank" rel="noopener noreferrer">
+                    03 módulos de 40 horas cada
                   </a>                  
                 </p>
               </div>
@@ -235,7 +235,7 @@
 
               <div class="extra-training-description-box">
                 <p class="extra-training-description-text">
-                  <a href="">
+                  <a href="" target="_blank" rel="noopener noreferrer">
                     1° lugar no ranking mundial do Github em 2021 <br> 01 módulo de 20 horas
                   </a>                  
                 </p>
@@ -275,7 +275,7 @@
 
               <div class="formation-description-box">
                 <p class="formation-description-text">
-                  <a href="">
+                  <a href="" target="_blank" rel="noopener noreferrer">
                     A prática da licenciatura proporciona o desenvolvimento de diversas soft skills, como boa comunicação, discurso assertivo, planejamento e flexibilidade.
                   </a>
                   
@@ -316,7 +316,7 @@
 
               <div class="more-info-description-box">
                 <p class="more-info-description-text"> 
-                  <a href="">
+                  <a href="" target="_blank" rel="noopener noreferrer">
                     Simulador de química desenvolvido com HTML, CSS e Javascript.
                   </a>
                 </p>                
