add linkedin ao contact info

--- a/index.html
+++ b/index.html
@@ -52,21 +52,27 @@
             <ul>
 
               <li class="contact-info-text"> <img class="icon" src="icons/whatsapp.svg" alt="ícone do whatsapp">
-              <a href="https://wa.me/5564993442586" target="_blank" rel="noopener noreferrer">
-                (64) 99344-2586
-              </a>
+                <a href="https://wa.me/5564993442586" target="_blank" rel="noopener noreferrer">
+                 (64) 99344-2586
+                </a>
               </li>
 
               <li class="contact-info-text"> <img class="icon" src="icons/gmail.svg" alt="ícone do g-mail">
-              <a href="mailto:diulytofalo@gmail.com" target="_blank" rel="noopener noreferrer">
-                diulytofalo@gmail.com
-              </a> 
+                <a href="mailto:diulytofalo@gmail.com" target="_blank" rel="noopener noreferrer">
+                  diulytofalo@gmail.com
+                </a> 
+              </li>
+              
+              <li class="contact-info-text"> <img class="icon" src="icons/linkedin.svg" alt="ícone do linkedin">
+                <a href="https://www.linkedin.com/in/diulytofalo/" target="_blank" rel="noopener noreferrer">
+                  Linkedin - diulytofalo
+                </a> 
               </li>
               
               <li class="contact-info-text"> <img class="icon" src="icons/github.svg" alt="ícone do github">
-              <a href="https://github.com/diulytofalo" target="_blank" rel="noopener noreferrer">
-                diulytofalo
-              </a> 
+                <a href="https://github.com/diulytofalo" target="_blank" rel="noopener noreferrer">
+                  Github - diulytofalo
+                </a> 
               </li>
 
             </ul>
